# flaskBlogApi

./: Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
blog_api/: api.py  app.py  constants.py  models.py
blog_api/migrations/versions/: 4cb2ca7a0831_initial_migration.py  b7073d15439f_initial_migration.py  de18613060a9_added_users.py  e3d1cf6454b9_added_author_id_to_blogs.py  ff5116e88bea_added_updated_at_column.py
blog_api/static/: main.css
blog_api/templates/: base.html  blog.html  blogs.html  edit_blog.html  login.html  new_blog.html  profile.html  sign-up.html
instance/: blogs.db
